Finished login page and routes

--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -1,10 +1,14 @@
 .contractitem-div {
-    width:75%;
-    background-color:lightgray;
+  width: 75%;
+  background-color: lightgray;
 }
 
 .personalLogs {
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+.login {
+  padding: 50px;
 }
