Added TextBox component and filled in NewContract.js

--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -1,4 +1,11 @@
+.contractitem-div:hover{
+    border-color: black;
+}
+
 .contractitem-div {
+    border: solid white 3px;
+    border-radius: 25px;
+    margin: 10px auto;
     width:75%;
     background-color:lightgray;
 }
@@ -7,4 +14,13 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+.contract-new-field {
+    border: solid black 2px;
+    border-radius: 5px;
+    min-width: 25%;
+    height: 40px;
+    font-size: medium;
+    font-weight: bolder;
 }
