--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -8,3 +8,34 @@
   flex-direction: column;
   justify-content: center;
 }
+
+#main-header {
+  margin: 2%;
+}
+
+#body-div {
+  margin-top: 3%;
+  width: 100%;
+  height: 100%;
+  background: url("images/blur-hemp.jpg") no-repeat center center fixed; 
+  background-position: center;
+  background-size: cover;
+  opacity: 0.3; 
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+}
+
+#why-hemptation {
+  float: none;
+  margin: 3%;
+  color: black;
+}
+
+.small-header {
+  font-size: 25px;
+  margin-top: 5%;
+  margin-bottom: 10px;
+}
