--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -22,7 +22,8 @@
 
 #body-div {
   margin-top: 3%;
-  width: 100%;
+  margin-left: -6%;
+  width: 113%; /* This is a bit sloppy, not sure about workaround though.*/
   height: 100%;
   background: url("images/blur-hemp.jpg") no-repeat center center fixed; 
   background-position: center;
@@ -46,6 +47,11 @@
   margin-top: 5%;
   margin-bottom: 10px;
 }
+
+.btn-why {
+  margin-top: 10px;
+}
+
 .login {
   padding: 50px;
 }
