--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -18,7 +18,8 @@
 
 #main-header {
   margin: 2%;
-}
+  color: white;
+  }
 
 #why-hemptation .small-header, #home-text-div p  {
   color: white;
@@ -30,9 +31,9 @@
   background-size: cover;
   position: absolute;
   z-index: -1;
-
   width: 100%;
   height: 100%;
+  top: -10px;
 }
 
 #home-text-div {
