--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -14,19 +14,21 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding: 25px;
 }
 
 #main-header {
   margin: 2%;
   color: white;
-  }
+}
 
-#why-hemptation .small-header, #home-text-div p  {
+#why-hemptation .small-header,
+#home-text-div p {
   color: white;
 }
 
 #home-picture-div {
-  background: url("images/blur-hemp.jpg") no-repeat center center fixed; 
+  background: url('images/blur-hemp.jpg') no-repeat center center fixed;
   background-position: center;
   background-size: cover;
   position: absolute;
@@ -40,7 +42,7 @@
   margin: 10%;
   border: solid white 2px;
   border-radius: 20px;
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0, 0, 0, 0.5);
   color: white;
 }
 
@@ -94,4 +96,3 @@
 .is-ancestor {
   border: none;
 }
-
